# Xandai-CLI

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_TIMEOUT_REMOVAL.md  CHANGELOG.md  CONTEXTO_COMPLETO_MELHORIAS.md  CONTEXT_MANAGEMENT_GUIDE.md  CONTRIBUTING.md  CONVERSATION_SYSTEM_README.md  DEVELOPMENT.md  ENHANCED_TAG_INSTRUCTIONS.md  ENHANCEMENT_SIZE_LIMITS_REMOVED.md  FILE_CONTENT_INJECTION_FEATURE.md  LICENSE  MANIFEST.in  PROMPT_ENCODING_TECHNICAL_SPECIFICATION.md  README.md  READ_FIRST_IMPLEMENTATION.md  REAL_TIME_READ_INTERRUPTION.md  RELEASE_NOTES_v2.1.8.md  SETUP_PRECOMMIT.md  TASK_COMMAND_ENHANCEMENTS.md  TOOLS_GUIDE.md  address.txt  config.env.example  debug_session.py  example_enhanced_file_operations.py  install.bat  install.sh  load_test_history_system.py  n_3.txt  n_4.txt  n_5.txt  n_6.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_filename_gen.py  test_integration_final.py  test_new_behavior.py  (+8 more)
.github/: PYPI_RELEASE_GUIDE.md  README.md
.xandai_history/: conversation.json
coding-rules/: README.md  flask.md  javascript.md  python.md  react.md
example/: agent_demo.md  agent_example.py  app.py
scripts/: biggest_files.ps1  run_precommit_tests.py
sessions/: README.md  conversation_backup_20250902_084505.json  conversation_backup_20250902_084919.json  conversation_backup_20250902_145949.json  conversation_backup_20250902_150544.json  conversation_backup_20250902_150818.json  conversation_backup_20250902_154624.json  conversation_backup_20250902_154728.json  conversation_backup_20250902_162111.json  conversation_backup_20250902_162636.json  conversation_backup_20250902_165036.json  conversation_backup_20250902_171320.json  conversation_backup_20250902_171611.json  conversation_backup_20250902_172641.json  conversation_backup_20250903_082737.json  conversation_backup_20250903_082756.json  conversation_history.json  session.backup.20250830_095232.store  session.backup.20250901_092844.store  (+8 more)
(+113 files in other folders)
